Initial check in for the 31 July 2022 release

--- a/concept-cloud-sync.adoc
+++ b/concept-cloud-sync.adoc
@@ -49,6 +49,7 @@ Cloud Sync supports the following storage types:
 * Cloud Volumes Service
 * Cloud Volumes ONTAP
 * Google Cloud Storage
+* Google Drive
 * IBM Cloud Object Storage
 * On-premises ONTAP cluster
 * ONTAP S3 Storage
