--- a/reference-requirements.adoc
+++ b/reference-requirements.adoc
@@ -162,26 +162,19 @@ If the source for a sync relationship is a SnapMirror destination (which is read
 
 When you set up a sync relationship that includes Google Drive, you'll need to provide the following:
 
-*
-*
+* An email address that has access to the Google Drive location where you want to sync data
+* A Google Cloud service account that has permissions to access Google Drive
+* A private key for the service account
 
+To set up the service account, follow the instructions on the following two pages in Google documentation:
 
-
-* The IP address of the LIF that's connected to ONTAP S3
-* The access key and secret key that ONTAP is configured to use
-
-https://developers.google.com/admin-sdk/directory/v1/guides/delegation
-
-Can I simply point users to that URL and say to follow the steps in these sections:
-
-	Create the service account and credentials
-	Delegate domain-wide authority to your service account
+* https://developers.google.com/admin-sdk/directory/v1/guides/delegation[Create the service account and credentials^]
+* https://developers.google.com/admin-sdk/directory/v1/guides/delegation[Delegate domain-wide authority to your service account^]
 
 When you edit the OAuth Scopes field, enter the following scopes:
 
-	https://www.googleapis.com/auth/drive
-	https://www.googleapis.com/auth/drive.file
-
+*	https://www.googleapis.com/auth/drive
+*	https://www.googleapis.com/auth/drive.file
 
 == NFS server requirements
 
