--- a/reference-requirements.adoc
+++ b/reference-requirements.adoc
@@ -166,10 +166,10 @@ When you set up a sync relationship that includes Google Drive, you'll need to p
 * The email address for a Google Cloud service account that has permissions to access Google Drive
 * A private key for the service account
 
-To set up the service account, follow the instructions on the following two pages in Google documentation:
+To set up the service account, follow the instructions in Google documentation:
 
-* https://developers.google.com/admin-sdk/directory/v1/guides/delegation[Create the service account and credentials^]
-* https://developers.google.com/admin-sdk/directory/v1/guides/delegation[Delegate domain-wide authority to your service account^]
+* https://developers.google.com/admin-sdk/directory/v1/guides/delegation#create_the_service_account_and_credentials[Create the service account and credentials^]
+* https://developers.google.com/admin-sdk/directory/v1/guides/delegation#delegate_domain-wide_authority_to_your_service_account[Delegate domain-wide authority to your service account^]
 
 When you edit the OAuth Scopes field, enter the following scopes:
 
