Copying ACLs from object storage to an SMB share is supported

--- a/task-copying-acls.adoc
+++ b/task-copying-acls.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: task-copying-acls.html
 keywords: permissions, access control list, acls, ntfs, cifs, smb, shares, robocopy, copy, transfer, activate, operating system, os, ram, cpu, networking, copy acls to the target
-summary: Cloud Sync can copy access control lists (ACLs) between a source SMB share and a target SMB share, and from a source SMB share to object storage (except for ONTAP S3).
+summary: Cloud Sync can copy access control lists (ACLs) between SMB shares and between an SMB share and object storage (except for ONTAP S3). If needed, you also have the option to manually preserve ACLs between SMB shares by using robocopy.
 ---
 
 = Copying ACLs from SMB shares
@@ -13,18 +13,16 @@ summary: Cloud Sync can copy access control lists (ACLs) between a source SMB sh
 :imagesdir: ./media/
 
 [.lead]
-Cloud Sync can copy access control lists (ACLs) between a source SMB share and a target SMB share, or from a source SMB share to object storage (except for ONTAP S3). If needed, you also have the option to manually preserve ACLs between SMB shares by using robocopy.
-
-NOTE: Cloud Sync doesn't support copying ACLs back from object storage to SMB shares.
+Cloud Sync can copy access control lists (ACLs) between SMB shares and between an SMB share and object storage (except for ONTAP S3). If needed, you also have the option to manually preserve ACLs between SMB shares by using robocopy.
 
 .Choices
 
 * <<Setting up Cloud Sync to copy ACLs from an SMB server,Set up Cloud Sync to automatically copy ACLs>>
 * <<Manually copying ACLs between SMB shares,Manually copy the ACLs between SMB shares>>
 
-== Setting up Cloud Sync to copy ACLs from an SMB server
+== Setting up Cloud Sync to copy ACLs
 
-Copy ACLs from an SMB server by enabling a setting when you create a relationship or after you create a relationship.
+Copy ACLs between SMB shares and between SMB shares and object storage by enabling a setting when you create a relationship or after you create a relationship.
 
 .What you'll need
 
@@ -34,7 +32,7 @@ This feature works with _any_ type of data broker: the AWS, Azure, Google Cloud 
 
 . From Cloud Sync, click *Create New Sync*.
 
-. Drag and drop *SMB Server* to the source, choose an SMB server or object storage as the target, and click *Continue*.
+. Drag and drop an SMB server or object storage as the source and an SMB server or object storage as the target, and click *Continue*.
 
 . On the *SMB Server* page:
 .. Enter a new SMB server or select an existing server and click *Continue*.
@@ -63,7 +61,7 @@ image:screenshot-sync-tags-metadata.png["A screenshot of the sixth step in the s
 
 .Result
 
-When syncing data, Cloud Sync preserves the ACLs between the source and target SMB shares, or from a source SMB share to object storage.
+When syncing data, Cloud Sync preserves the ACLs between the source and target.
 
 == Manually copying ACLs between SMB shares
 
