--- a/task-managing-relationships.adoc
+++ b/task-managing-relationships.adoc
@@ -16,7 +16,7 @@ summary: You can manage sync relationships at any time by immediately syncing da
 [.lead]
 You can manage sync relationships at any time by immediately syncing data, changing schedules, and more.
 
-== Performing an immediate data sync
+== Perform an immediate data sync
 
 Rather than wait for the next scheduled sync, you can press a button to immediately sync data between the source and target.
 
@@ -86,6 +86,34 @@ If you entered a domain when you created the sync relationship, but you don't en
 
 Cloud Sync updates the credentials on the data broker. It can take up 10 minutes until the data broker starts using the updated credentials for data syncs.
 
+== Setting up notifications
+
+A *Notifications* setting for each sync relationship enables you to choose whether to receive Cloud Sync notifications in Cloud Manager's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
+
+image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-sync/main/media/screenshot-notification-center.png[A screenshot that shows the Notification Center in Cloud Manager.]
+
+In addition, you can also receive notifications by email for sync relationships that have the "Failed to Sync" or "Running Continuously" status.
+
+.Steps
+
+. From the *Dashboard*, navigate to the sync relationship and click image:icon-sync-action.png[A screenshot of the button that enables you to take actions on a sync relationship]
+
+. Click *Settings*.
+
+. Enable *Notifications*.
+
+. Click *Save Settings*.
+
+. If you want to receive notifications by email for sync relationships that have the "Failed to Sync" or "Running Continuously" status, click *Settings > Alerts and Notifications Settings*.
+
+. Select a user or multiple users and choose the Info notification type.
+
+. Click *Apply*.
+
+.Result
+
+You'll now receive Cloud Sync notifications in Cloud Manager's Notification Center, with a few notifications arriving by email, if you configured that option.
+
 == Changing the settings for a sync relationship
 
 Modify settings that define how source files and folders are synced and maintained in the target location.
@@ -105,6 +133,8 @@ Schedule:: Choose a recurring schedule for future syncs or turn off the sync sch
 Sync Timeout:: Define whether Cloud Sync should cancel a data sync if the sync hasn't completed in the specified number of hours or days.
 
 Notifications:: Enables you to choose whether to receive Cloud Sync notifications in Cloud Manager's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
++
+If you want to receive notifications for
 
 Retries:: Define the number of times that Cloud Sync should retry to sync a file before skipping it.
 
