--- a/whats-new.adoc
+++ b/whats-new.adoc
@@ -44,7 +44,7 @@ You can now receive notifications by email for sync relationships that have the 
 
 In order to receive the notifications by email, you'll need to enable the *Notifications* setting on the sync relationship and then configure the Alerts and Notification settings in Cloud Manager.
 
-https://docs.netapp.com/us-en/cloud-manager-sync/task-managing-relationships.html#set-up-notifications[Learn how to set up notifications].
+https://docs.netapp.com/us-en/cloud-manager-sync/task-managing-relationships.html#setting-up-notifications[Learn how to set up notifications].
 
 == 31 July 2022
 
