--- a/task-creating-relationships.adoc
+++ b/task-creating-relationships.adoc
@@ -105,7 +105,7 @@ Retries:: Define the number of times that Cloud Sync should retry to sync a file
 
 Continuous Sync:: After the initial data sync, Cloud Sync listens for changes on the source S3 bucket or Google Cloud Storage bucket and continuously syncs any changes to the target as they occur. There's no need to rescan the source at scheduled intervals.
 +
-This setting is available only when creating a sync relationship and when you sync from an S3 bucket or Google Cloud Storage to   Azure Blob storage, Google Cloud Storage, IBM Cloud Object Storage, NFS, S3, or StorageGRID.
+This setting is available only when creating a sync relationship and when you sync data from an S3 bucket or Google Cloud Storage to any of the following targets: Azure Blob storage, CIFS, Google Cloud Storage, IBM Cloud Object Storage, NFS, S3, and StorageGRID.
 +
 If you enable this setting, it affects other features as follows:
 +
