--- a/task-quick-start.adoc
+++ b/task-quick-start.adoc
@@ -14,7 +14,7 @@ summary: Getting started with the Cloud Sync service includes a few steps.
 
 Getting started with the Cloud Sync service includes a few steps.
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-1.png[One] Prepare your source and target
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-1.png[One] Log in and set up Cloud Manager
 
 [role="quick-margin-para"]
 You should have gotten started with Cloud Manager, which includes logging in, setting up an account, and possibly deploying a Connector and creating working environments.
@@ -63,7 +63,7 @@ Cloud Sync guides you through the installation process when you create a sync re
 [role="quick-margin-para"]
 Log in to https://cloudmanager.netapp.com/[Cloud Manager^], click *Sync*, and then drag and drop your selections for the source and target. Follow the prompts to complete the setup. link:task-creating-relationships.html[Learn more].
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-4.png[Four] Pay for your sync relationships after your free trial ends
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-5.png[Five] Pay for your sync relationships after your free trial ends
 
 [role="quick-margin-para"]
 Subscribe from AWS or Azure to pay-as-you-go or to pay annually. Or purchase licenses directly from NetApp. Just go to the License Settings page in Cloud Sync to set it up. link:task-licensing.html[Learn more].
