--- a/task-creating-relationships.adoc
+++ b/task-creating-relationships.adoc
@@ -15,7 +15,7 @@ summary: When you create a sync relationship, the Cloud Sync service copies file
 [.lead]
 When you create a sync relationship, the Cloud Sync service copies files from the source to the target. After the initial copy, the service syncs any changed data every 24 hours.
 
-Before you can create some types of sync relationships, you'll first need to create a working environment in Cloud Manager.
+Before you can create some types of sync relationships, you'll first need to create a working environment in BlueXP.
 
 == Create sync relationships for specific types of working environments
 
@@ -52,7 +52,7 @@ image:screenshot_sync_we.gif[A screenshot that shows the actions available from 
 
 Use these steps to sync data to or from a supported storage type other than Amazon FSx for ONTAP, Azure NetApp Files, Cloud Volumes ONTAP, or on-prem ONTAP clusters. The steps below provide an example that shows how to set up a sync relationship from an NFS server to an S3 bucket.
 
-. In Cloud Manager, click *Sync*.
+. In BlueXP, click *Sync*.
 
 . On the *Define Sync Relationship* page, choose a source and target.
 +
@@ -99,7 +99,7 @@ Schedule:: Choose a recurring schedule for future syncs or turn off the sync sch
 
 Sync Timeout:: Define whether Cloud Sync should cancel a data sync if the sync hasn't completed in the specified number of hours or days.
 
-Notifications:: Enables you to choose whether to receive Cloud Sync notifications in Cloud Manager's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
+Notifications:: Enables you to choose whether to receive Cloud Sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
 
 Retries:: Define the number of times that Cloud Sync should retry to sync a file before skipping it.
 
