--- a/task-licensing.adoc
+++ b/task-licensing.adoc
@@ -91,7 +91,7 @@ You'll need the serial number for your license and the user name and password fo
 
 . Purchase a license by mailto:ng-cloudsync-contact@netapp.com?subject=Cloud%20Sync%20Service%20-%20BYOL%20License%20Purchase%20Request[contacting NetApp].
 
-. In Cloud Manager, click *Sync > Licensing*.
+. In BlueXP, click *Sync > Licensing*.
 
 . Click *Add License* and add the required information:
 
@@ -99,7 +99,7 @@ You'll need the serial number for your license and the user name and password fo
 
 .. Select the NetApp Support Site account that is associated with the license that you're adding:
 +
-* If your account was already added to Cloud Manager, select it from the drop-down list.
+* If your account was already added to BlueXP, select it from the drop-down list.
 * If your account wasn't added yet, click *Add NSS Credentials*, enter the user name and password, click *Register*, and then select it from the drop-down list.
 
 .. Click *Add*.
@@ -110,7 +110,7 @@ If you extended a Cloud Sync license that you purchased from NetApp, the new exp
 
 .Steps
 
-. In Cloud Manager, click *Sync > Licensing*.
+. In BlueXP, click *Sync > Licensing*.
 
 . Click *Add License* and add the required information:
 
