--- a/task-managing-relationships.adoc
+++ b/task-managing-relationships.adoc
@@ -88,9 +88,9 @@ Cloud Sync updates the credentials on the data broker. It can take up 10 minutes
 
 == Setting up notifications
 
-A *Notifications* setting for each sync relationship enables you to choose whether to receive Cloud Sync notifications in Cloud Manager's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
+A *Notifications* setting for each sync relationship enables you to choose whether to receive Cloud Sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
 
-image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-sync/main/media/screenshot-notification-center.png[A screenshot that shows the Notification Center in Cloud Manager.]
+image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-sync/main/media/screenshot-notification-center.png[A screenshot that shows the Notification Center in BlueXP.]
 
 In addition, you can also receive notifications by email.
 
@@ -116,7 +116,7 @@ In addition, you can also receive notifications by email.
 
 .Result
 
-You'll now receive Cloud Sync notifications in Cloud Manager's Notification Center, with a few notifications arriving by email, if you configured that option.
+You'll now receive Cloud Sync notifications in BlueXP's Notification Center, with a few notifications arriving by email, if you configured that option.
 
 == Changing the settings for a sync relationship
 
@@ -136,7 +136,7 @@ Schedule:: Choose a recurring schedule for future syncs or turn off the sync sch
 
 Sync Timeout:: Define whether Cloud Sync should cancel a data sync if the sync hasn't completed in the specified number of hours or days.
 
-Notifications:: Enables you to choose whether to receive Cloud Sync notifications in Cloud Manager's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
+Notifications:: Enables you to choose whether to receive Cloud Sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
 +
 If you want to receive notifications for
 
