--- a/reference-supported-relationships.adoc
+++ b/reference-supported-relationships.adoc
@@ -67,6 +67,7 @@ Cloud Sync enables you to sync data from a source to a target. This is called a 
 * IBM Cloud Object Storage
 * NFS server
 * On-premises ONTAP cluster
+* ONTAP S3 Storage
 * SMB server
 * StorageGRID
 
@@ -221,6 +222,7 @@ Cloud Sync enables you to sync data from a source to a target. This is called a 
 
 | ONTAP S3 Storage a|
 
+* Amazon S3
 * Google Cloud Storage
 * SMB server
 * StorageGRID
