--- a/whats-new.adoc
+++ b/whats-new.adoc
@@ -20,11 +20,11 @@ Learn what's new in Cloud Sync.
 
 === Filter directories by name
 
-A new *Exclude Directory Names* setting is now available for sync relationships. Users can filter out a maximum of 15 directory names from their sync.
+A new *Exclude Directory Names* setting is now available for sync relationships. Users can filter out a maximum of 15 directory names from their sync. The .copy-offload, .snapshot, ~snapshot directories are excluded by default.
 
 https://docs.netapp.com/us-en/cloud-manager-sync/task-creating-relationships.html#settings[Learn more about the Exclude Directory Names setting].
 
-== Additional Amazon S3 and ONTAP S3 Storage support
+=== Additional Amazon S3 and ONTAP S3 Storage support
 
 Cloud Sync now supports additional sync relationships for AWS S3 and ONTAP S3 Storage:
 
