--- a/whats-new.adoc
+++ b/whats-new.adoc
@@ -26,7 +26,7 @@ https://docs.netapp.com/us-en/cloud-manager-sync/task-managing-data-brokers.html
 
 === Upgrade to Azure and Google Cloud data broker operating system
 
-The operating system for data brokers in Azure and Google Cloud have been upgraded to the Rocky Linux 9.0.
+The operating system for data brokers in Azure and Google Cloud has been upgraded to the Rocky Linux 9.0.
 
 https://docs.netapp.com/us-en/cloud-manager-sync/task-installing-azure.html#details-about-the-data-broker-vm[Learn more about the data broker instance in Azure].
 
